# project-generator-cli-poc

./: .coveragerc  .isort.cfg  .projenrc.py  .pygenrc.py  AUTHORS.rst  CONTRIBUTING.rst  README.md  README.rst  Untitled.ipynb  setup.cfg  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/: conf.py  index.rst
sample-pygen-proj/pandas-project/: setup.cfg
sample-pygen-proj/python-package-1/: .pre-commit-config.yaml  file.txt  file2.txt
sample-pygen-proj/python-package-2/: setup.cfg
src/proj/: __init__.py  construct.py  consts.py  file.py  node.py  project.py  types.py
src/proj/files/: text_file.py  yaml_file.py
src/proj/files/.pygen/: files.yaml
src/proj/internal/: file_registry.py
src/proj/python/: __init__.py  setup_cfg.py
tests/: conftest.py  test_skeleton.py
